--- a/Python/Maxima.html
+++ b/Python/Maxima.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="icon" href="img/c9.png"><title>PsuMaxima</title>
-<link type="text/css" rel="stylesheet" href="css/alcraft.css">
+<link rel="icon" href="img/atom.ico"><title>PsuMaxima</title>
 <style> 
 body {text-align:left;background-color:LightSteelBlue;margin-left: 52px;} 
 img {width:95% }table {font-size:0.8vw;width:95%;table-layout:fixed;display:table;margin:0 auto;background-color:LightSteelBlue ;} 
