--- a/Python/Maxima.html
+++ b/Python/Maxima.html
@@ -17,7 +17,7 @@ a:hover {color:white;}
 <hr/>
 <p style="background-color:Crimson;margin:5px;padding:5px;color:AliceBlue;">
    <a href='Maxima.html' title='Home' target='_self'>PhD Home</a>
-~ <a href='index.html' title='Student' target='_blank'>Student home</a>
+~ <a href='index.html' title='Student' target='_blank'>Student Home</a>
 ~ <a href='https://www.bbk.ac.uk/departments/biology/' title='Birkbeck' target='_blank'>Birkbeck Biology</a>
 </p>
 
@@ -84,10 +84,8 @@ Enter 4 digit pdb code: <input type='text' name='dataInput' value="1ejg" /><br/>
 </div>
 
 <hr/>
-<div id="bottom">
-<p>
+<p style="background-color:Crimson;margin:5px;padding:5px;color:AliceBlue;">
 Created by: Rachel Alcraft<br/>
 <a href="https://student.cryst.bbk.ac.uk/~ab002/" title="PhDBio" target="_blank">Birkbeck Student Page - Rachel Alcraft</a>
 </p>
-</div>
 </body>
