--- a/Python/Documentation.html
+++ b/Python/Documentation.html
@@ -10,6 +10,9 @@ td {padding:2px;border:0.5px solid rgb(180, 180, 280,0.75);background-color:Alic
 a:link{color:MistyRose;}
 a:visited {color:MistyRose;}
 a:hover {color:white;}
+a.change_link_color:link{color: black;}
+a.change_link_color:visited{color: DarkSlateBlue;}
+a.change_link_color:hover{color: Navy;}
 </style></head>
 </head>
 <body>
@@ -28,20 +31,26 @@ a:hover {color:white;}
 ~ <a href='index.html' title='Student' target='_blank'>Student Home</a>
 ~ <a href='https://www.bbk.ac.uk/departments/biology/' title='Birkbeck' target='_blank'>Birkbeck Biology</a>
 </p>
-
 <hr/>
-
-
 <p>
 <h3>PhD project: <font color="DC143C">Leu</font>cip<font color="DC143C">pus</font></h3>
 </p>
-<div style="background-color:Silver;margin:3px;padding:3px;color:Crimson;">
-<p><b>An exploration of atoms and bonds through electron density topology.</b></p>
+<hr/>
+<div style="background-color:Silver;padding:3px">
+<p>Documentation currently under construction</p>
+<hr/>
+<h3>References</h3>
+<li>Afonine, Pavel V., Vladimir Y. Lunin, Nicolas Muzet, and Alexandre Urzhumtsev. ‘On the Possibility of the Observation of Valence Electron Density for Individual Bonds in Proteins in Conventional Difference Maps’. Acta Crystallographica Section D Biological Crystallography 60, no. 2 (1 February 2004): 260–74. https://doi.org/10.1107/S0907444903026209.
+</li>
+<li>Thévenaz, P., Blu, T., &#38; Unser, M. (2000). Interpolation Revisited. <i>IEEE TRANSACTIONS ON MEDICAL IMAGING</i>, <i>19</i>(7), 739.</li>
+<li>Yao, S., &#38; Moseley, H. N. B. (2019). <i>A chemical interpretation of protein electron density maps in the worldwide protein data bank</i></li>
+<h3>Web Resources</h3>
+<li><a class="change_link_color" href='https://www.phenix-online.org/presentations/latest/pavel_maps_2.pdf'' title='PavelAfonine' target='_blank'>Pavel Afonine: Some Facts About Maps</a></li>
+<li><a class="change_link_color" href='https://gemmi.readthedocs.io/en/latest/' title='Gemmi' target='_blank'>CCP4 Project GEMMI: library for structural biology</a></li>
+<li><a class="change_link_color" href='https://chem.libretexts.org/Bookshelves/Inorganic_Chemistry/Modules_and_Websites_(Inorganic_Chemistry)/Crystallography/X-rays/CromerMann_coefficients'' title='Libre' target='_blank'>LibreTexts: Cromer-Mann coefficients</a></li>
+
 </div>
-<p>
-These webpages interface with a C++ program analysing and calculating ccp4 and synthetic density and topology.<br/> 
-<i>The code will be open source when out of dev</i>
-</p>
+
 
 
 <hr/>
