--- a/Python/Synthetic.html
+++ b/Python/Synthetic.html
@@ -47,11 +47,12 @@ This webpage interfaces with a C++ executable which calculates synthetic density
 <h3>Synthetic Density Analysis</h3>
 <p>
 Each row is an atom with type, coordinates, residue number (for bond electrons), bfactor, occupancy, arc parameters (end positions and number of positions).</br>
-Example atoms have been entered for you which you can edit, the end positions are blank as no motion is being modelled. The format is a csv file, with the header above the text area</br></br>
-<b>Type,X,Y,Z,ResNo,BFactor,Occupancy,EndX,EndY,EndZ,ArcHeight</b></br> 
-<textarea id="atoms" name="atoms" rows="5" cols="120">
-N,0.10,0.10,0.20,1,2.4,1.00,,,,,
-CA,0.10,1.10,0.20,2,2.6,1.00,,,,,
+Example atoms have been entered for you which you can edit, the end positions are blank as no motion is being modelled. The format is a csv file, with the header above the text area (start the line with @).</br></br>
+<b>@Type,X,Y,Z,ResNo,BFactor,Occupancy,EndX,EndY,EndZ,ArcHeight</b></br> 
+<textarea style="white-space:pre-wrap;" id="atoms" name="atoms" rows="5" cols="120">
+@N,9.5,9.079,14.937,1,2.4,1.00,-,-,-,-
+@CA,9.373,7.688,15.546,2,2.6,1.00,-,-,-,-
+@C,9.64,7.542,16.748,3,2.6,1.00,-,-,-,-
   </textarea>
 <p>
 
@@ -77,7 +78,7 @@ Z=<input size="4" type="text" name="PZ" value=16.748 /></td></tr></table>
 <div style="text-align: left;padding:5px"><b>Settings for image size</b></div>
 <table style="background-color:AliceBlue">
 <tr>
-<td>Width(&#8491;)=<input size="4" type="text" name="Width" value=5 /> Granularity(&#8491;)=<input size="4" type="text" name="Gran" value=0.1 /></td>
+<td>Width(&#8491;)=<input size="4" type="text" name="Width" value=5 /> Granularity(&#8491;)=<input size="4" type="text" name="Gran" value=0.02 /></td>
 </tr>
 </table>
 </td></tr></table>
