--- a/Python/Synthetic.html
+++ b/Python/Synthetic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="icon" href="img/atom.ico"><title>Leucippus</title>
+<link rel="icon" href="img/atom.ico"><title>Leucippus Synthetic</title>
 <style> 
 body {text-align:left;background-color:LightSteelBlue;margin-left: 52px;}
 img {width:85%;border:1px solid MistyRose; }
@@ -48,11 +48,11 @@ This webpage interfaces with a C++ executable which calculates synthetic density
 <p>
 Each row is an atom with type, coordinates, residue number (for bond electrons), bfactor, occupancy, arc parameters (end positions and number of positions).</br>
 Example atoms have been entered for you which you can edit, the end positions are blank as no motion is being modelled. The format is a csv file, with the header above the text area (start the line with @).</br></br>
-<b>@Type,X,Y,Z,ResNo,BFactor,Occupancy,EndX,EndY,EndZ,ArcHeight</b></br> 
+<b>@Type,X,Y,Z,ResNo,BFactor,Occupancy,StartX,StartY,StartZ,EndX,EndY,EndZ,Count</b></br> 
 <textarea style="white-space:pre-wrap;" id="atoms" name="atoms" rows="5" cols="120">
-@N,9.5,9.079,14.937,1,2.4,1.00,-,-,-,-
-@CA,9.373,7.688,15.546,2,2.6,1.00,-,-,-,-
-@C,9.64,7.542,16.748,3,2.6,1.00,-,-,-,-
+@CA,9.5,9.079,14.937,1,2.4,1.00,-,-,-,-,-,-,-
+@C,9.373,7.688,15.546,2,2.6,1.00,-,-,-,-,-,-,-
+@O,9.64,7.542,16.748,3,2.6,1.00,-,-,-,-,-,-,-
   </textarea>
 <p>
 
