--- a/Python/Documentation.html
+++ b/Python/Documentation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="icon" href="img/atom.ico"><title>Leucippus</title>
+<link rel="icon" href="img/atom.ico"><title>Leucippus Help</title>
 <style> 
 body {text-align:left;background-color:LightSteelBlue;margin-left: 52px;}
 img {width:85%;border:1px solid MistyRose; }
