--- a/Python/Leucippus.html
+++ b/Python/Leucippus.html
@@ -21,14 +21,16 @@ a.change_link_color:hover{color: Navy;}
 <h1>
 <div style="background-color:black;padding:10px">
 <font color="DC143C">Leu</font><font color="AliceBlue">cip</font><font color="DC143C">pus</font>
+<img style="width:25px;border:2px" src="img/atom.ico" alt="Leucippus Atom">
+<font color="AliceBlue">Atomic </font><font color="Crimson">Density </font><font color="AliceBlue">Explorer</font>
 </div>
 </h1>
 <p style="background-color:Crimson;margin:5px;padding:5px;color:AliceBlue;">
    <a href='Leucippus.html' title='Home' target='_self'>PhD Home</a>
+ ~  <a href='InputPeaks.html' title='Home' target='_self'>User Uploads</a>
  ~  <a href='Peaks.html' title='Home' target='_self'>Peaks Explorer</a>
- ~  <a href='Synthetic.html' title='Home' target='_self'>Synthetic Density</a>
+ ~  <a href='Slices.html' title='Home' target='_self'>Local Maps</a>
  ~  <a href='Documentation.html' title='Docs' target='_self'>Documentation</a>
-~ <a href='index.html' title='Student' target='_blank'>Student Home</a>
 ~ <a href='https://www.bbk.ac.uk/departments/biology/' title='Birkbeck' target='_blank'>Birkbeck Biology</a>
 </p>
 
@@ -36,12 +38,15 @@ a.change_link_color:hover{color: Navy;}
 
 
 <p>
-<h3>PhD project: <font color="DC143C">Leu</font>cip<font color="DC143C">pus</font></h3>
+<h3>PhD project: <font color="DC143C">Leu</font>cip<font color="DC143C">pus</font> - Atomic <font color="DC143C">Density</font> Explorer</h3>
 </p>
 <div style="background-color:black;margin:3px;padding:3px;color:AliceBlue;">
-<p><b>An exploration of atoms and bonds through electron density topology.</b></p></div>
+<p><b>An exploration of atoms and bonds through electron density topology.</b>
+<br/><br/>(This is all/ways a work in progress).
+<br/> <br/> The projects made available here are side-ouputs from my PhD project, written to assist me in my research.
+</p></div>
 <div style="background-color:Silver;margin:3px;padding:3px;color:Crimson;">
-<p><b>Student: Rachel Alcraft, PhD student at Birkbeck, University of London, 2021 +<br/></b></p>
+<p><b>Developed by Rachel Alcraft, PhD student at Birkbeck, University of London, 2021 +<br/></b></p>
 <p><b>Supervisor: </b>
 <a class="change_link_color" href="http://people.cryst.bbk.ac.uk/~ubcg66a/" title="MAW" target="_blank">Mark A. Williams</a>
 </p>
@@ -50,12 +55,16 @@ a.change_link_color:hover{color: Navy;}
 These webpages interface with a C++ program analysing and calculating ccp4 and synthetic density and topology.<br/> 
 <i>The code will be open source when out of dev</i>
 </p>
+<h3>~ Applications still under construction ~</h3>
+<p>
+<b>Synthetic Density Models</b><br/>An application to define and visualise synthtic electron density with the IAM and bond electron models.
+<a class="change_link_color" href='Synthetic.html' title='Home' target='_self'>Synthetic Density</a>
+</p>
 
 
 <hr/>
 <p style="background-color:Crimson;margin:5px;padding:5px;color:AliceBlue;">
 Created by: Rachel Alcraft <a href="https://student.cryst.bbk.ac.uk/~ab002/Leucippus.html" title="Leucippus" target="_self">Leucippus Home</a><br/>
 Supervisor: <a href="http://people.cryst.bbk.ac.uk/~ubcg66a/" title="MAW" target="_blank">Mark A. Williams</a>
-
 </p>
 </body>
