--- a/Python/Peaks.html
+++ b/Python/Peaks.html
@@ -18,22 +18,25 @@ a:hover {color:white;}
 <h1>
 <div style="background-color:black;padding:10px">
 <font color="DC143C">Leu</font><font color="AliceBlue">cip</font><font color="DC143C">pus</font>
+<img style="width:25px;border:2px;" src="img/atom.ico" alt="Leucippus Atom">
+<font color="AliceBlue">Atomic </font><font color="Crimson">Density </font><font color="AliceBlue">Explorer</font>
 </div>
 </h1>
 <p style="background-color:Crimson;margin:5px;padding:5px;color:AliceBlue;">
-   <a href='Maxima.html' title='Home' target='_self'>PhD Home</a>
+   <a href='Leucippus.html' title='Home' target='_self'>PhD Home</a>
+ ~  <a href='InputPeaks.html' title='Home' target='_self'>User Uploads</a>
  ~  <a href='Peaks.html' title='Home' target='_self'>Peaks Explorer</a>
- ~  <a href='Synthetic.html' title='Home' target='_self'>Synthetic Density</a>
+ ~  <a href='Slices.html' title='Home' target='_self'>Local Maps</a>
  ~  <a href='Documentation.html' title='Docs' target='_self'>Documentation</a>
-~ <a href='index.html' title='Student' target='_blank'>Student Home</a>
 ~ <a href='https://www.bbk.ac.uk/departments/biology/' title='Birkbeck' target='_blank'>Birkbeck Biology</a>
 </p>
+
 
 <hr/>
 
 
 <p>
-<h3>PhD project: <font color="DC143C">Leu</font>cip<font color="DC143C">pus</font></h3>
+<h3>PhD project: <font color="DC143C">Leu</font>cip<font color="DC143C">pus</font> - Atomic <font color="DC143C">Density</font> Explorer</h3>
 </p>
 <p>
 This webpage interfaces with a C++ executable which calculates density maxima in ccp4 files from the PDBe. 
@@ -91,7 +94,7 @@ Z=<input size="4" type="text" name="PZ" value=16.748 /></td></tr></table>
 
 <hr/>
 <p style="background-color:Crimson;margin:5px;padding:5px;color:AliceBlue;">
-Created by: Rachel Alcraft<br/>
-<a href="https://student.cryst.bbk.ac.uk/~ab002/" title="PhDBio" target="_blank">Birkbeck Student Page - Rachel Alcraft</a>
+Created by: Rachel Alcraft <a href="https://student.cryst.bbk.ac.uk/~ab002/Leucippus.html" title="Leucippus" target="_self">Leucippus Home</a><br/>
+Supervisor: <a href="http://people.cryst.bbk.ac.uk/~ubcg66a/" title="MAW" target="_blank">Mark A. Williams</a>
 </p>
 </body>
