--- a/Python/Leucippus.html
+++ b/Python/Leucippus.html
@@ -42,19 +42,19 @@ a.change_link_color:hover{color: Navy;}
 </p>
 <div style="background-color:black;margin:3px;padding:3px;color:AliceBlue;">
 <p><b>An exploration of atoms and bonds through electron density topology.</b>
-<br/><br/>(This is all/ways a work in progress).
-<br/> <br/> The projects made available here are side-ouputs from my PhD project, written to assist me in my research.
 </p></div>
+<p>The projects made available here are side-ouputs from my PhD project, written to assist me in my research.</p>
+<p>
+These webpages interface with a C++ program analysing and calculating ccp4 and synthetic density and topology.<br/> 
+<i>The code will be open source when out of dev</i>
+</p>
 <div style="background-color:Silver;margin:3px;padding:3px;color:Crimson;">
 <p><b>Developed by Rachel Alcraft, PhD student at Birkbeck, University of London, 2021 +<br/></b></p>
 <p><b>Supervisor: </b>
 <a class="change_link_color" href="http://people.cryst.bbk.ac.uk/~ubcg66a/" title="MAW" target="_blank">Mark A. Williams</a>
 </p>
 </div>
-<p>
-These webpages interface with a C++ program analysing and calculating ccp4 and synthetic density and topology.<br/> 
-<i>The code will be open source when out of dev</i>
-</p>
+
 <h3>~ Applications still under construction ~</h3>
 <p>
 <b>Synthetic Density Models</b><br/>An application to define and visualise synthtic electron density with the IAM and bond electron models.
@@ -64,7 +64,9 @@ These webpages interface with a C++ program analysing and calculating ccp4 and s
 
 <hr/>
 <p style="background-color:Crimson;margin:5px;padding:5px;color:AliceBlue;">
-Created by: Rachel Alcraft <a href="https://student.cryst.bbk.ac.uk/~ab002/Leucippus.html" title="Leucippus" target="_self">Leucippus Home</a><br/>
-Supervisor: <a href="http://people.cryst.bbk.ac.uk/~ubcg66a/" title="MAW" target="_blank">Mark A. Williams</a>
+Created by: <a href = "mailto:ralcra01@student.bbk.ac.uk" > Rachel Alcraft </a >
+ ~ Home page: <a href="https://student.cryst.bbk.ac.uk/~ab002/Leucippus.html" title="Leucippus" target="_self">Leucippus</a>
+ ~ Supervisor: <a href="http://people.cryst.bbk.ac.uk/~ubcg66a/" title="MAW" target="_blank">Mark A. Williams</a>
+ ~ Birkbeck, University of London, 2021
 </p>
 </body>
