--- a/Python/Slices.html
+++ b/Python/Slices.html
@@ -53,9 +53,16 @@ Enter 4 digit pdb code: <input type="text" name="dataInput" value=1ejg /><br/><b
 <table><tr><td style="background-color:Crimson;color:AliceBlue"">~~ Model Paramaters parameters ~~</td><td style="background-color:Crimson;color:AliceBlue"">~~ 3-point coordinates for plane ~~</td></tr>
 <tr><td>
 <div style="text-align: left;">
-<p>Interpolation:<br/>
+<p><b>Interpolation:</b><br/>
 <input type="radio" id="spline" name="interpMethod" value="spline" checked="checked"><label for="spline">B-Spline</label><br/>
-<input type="radio" id="nearest" name="interpMethod" value="nearest"><label for="nearest">Nearest Neighbour</label><br/><br/><br/><br/>
+<input type="radio" id="nearest" name="interpMethod" value="nearest"><label for="nearest">Nearest Neighbour</label><br/>
+</p>
+
+<p><b>Fo and Fc numbers:</b><br/>
+The main ccp4 file contains 2Fo-Fc<br/>
+The diff file contains Fo-Fc<br/>
+No Fos: <input type="text" name="Fos" value="2" size="2"/><br/>
+No Fcs: <input type="text" name="Fcs" value="-1" size="2"/><br/>
 </p>
 </div></td>
 <td>
@@ -82,7 +89,9 @@ Z=<input size="4" type="text" name="PZ" value=16.748 /></td></tr></table>
 
 <hr/>
 <p style="background-color:Crimson;margin:5px;padding:5px;color:AliceBlue;">
-Created by: Rachel Alcraft <a href="https://student.cryst.bbk.ac.uk/~ab002/Leucippus.html" title="Leucippus" target="_self">Leucippus Home</a><br/>
-Supervisor: <a href="http://people.cryst.bbk.ac.uk/~ubcg66a/" title="MAW" target="_blank">Mark A. Williams</a>
+Created by: <a href = "mailto:ralcra01@student.bbk.ac.uk" > Rachel Alcraft </a >
+ ~ Home page: <a href="https://student.cryst.bbk.ac.uk/~ab002/Leucippus.html" title="Leucippus" target="_self">Leucippus</a>
+ ~ Supervisor: <a href="http://people.cryst.bbk.ac.uk/~ubcg66a/" title="MAW" target="_blank">Mark A. Williams</a>
+ ~ Birkbeck, University of London, 2021
 </p>
 </body>
