linux before reboot

--- a/Python/InputPeaks.html
+++ b/Python/InputPeaks.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="icon" href="img/atom.ico"><title>Leucippus Peaks</title>
+<link rel="icon" href="img/atom.ico"><title>Leucippus Upload</title>
 <style> 
 body {text-align:left;background-color:LightSteelBlue;margin-left: 52px;}
 img {width:85%;border:1px solid MistyRose; }
