--- a/Python/Peaks.html
+++ b/Python/Peaks.html
@@ -50,7 +50,7 @@ This webpage interfaces with a C++ executable which calculates density maxima in
 <form method="post" action="/cgi-bin/cgiwrap/ab002/PhD/Maxima.cgi" accept-charset="UTF-8">
 <b>~~ Application access credentials ~~</b><br/><i>You must enter a valid email address to access this software. Passwords will be forthcoming.</i><br/>Email address: <input type='text' name='email' value='' /> Password: <input type='text' name='password' value='not used' /><hr/><h3>Electron Density Analysis</h3>Enter 4 digit pdb code: <input type="text" name="dataInput" value=1ejg />
 <br/><br/>
-<table><tr><td style="background-color:Crimson;color:AliceBlue">~~ Choose results to display ~~</td><td style="background-color:Crimson;color:AliceBlue"">~~ Calculation parameters ~~</td><td style="background-color:Crimson;color:AliceBlue"">~~ 3-point coordinates for plane ~~</td></tr><tr>
+<table><tr><td style="background-color:Crimson;color:AliceBlue">~~ Choose results to display ~~</td><td style="background-color:Crimson;color:AliceBlue"">~~ Calculation parameters ~~</td></tr><tr>
 <td>
 <table style="text-align: left;">
 <tr><td><label for="D1">1) Peaks visual projection to 3 planes</label></td><td><input type="checkbox" id="Data1" name="Data1" value="1" checked="checked"></td></tr>
@@ -77,7 +77,7 @@ No Fcs: <input type="text" name="Fcs" value="-1" size="2"/><br/>
 
 <!--<p>Interpolation frequency: <input size="4" type="text" name="interpNum" value=2 /></p><p>Iterations per grid point, <br/>enter between 0 and 5, <br/>0 or 1 means grid points only</p>-->
 </div></td>
-<td>
+<!--<td>
 <div style="text-align: left;"><b>Enter three points to get a density contour slice from the electron density.</b></div>
 <table style="background-color:AliceBlue;text-align:left;"><tr><td>Central: X=<input size="4" type="text" name="CX" value=9.373 />
 Y=<input size="4" type="text" name="CY" value=7.688 />
@@ -91,7 +91,7 @@ Z=<input size="4" type="text" name="PZ" value=16.748 /></td></tr></table>
 <div style="text-align: left;padding:5px"><b>Settings for image size</b></div>
 <table style="background-color:AliceBlue">
 <tr>
-<td>Width(&#8491;)=<input size="4" type="text" name="Width" value=5 /> Granularity(&#8491;)=<input size="4" type="text" name="Gran" value=0.1 /></td>
+<td>Width(&#8491;)=<input size="4" type="text" name="Width" value=5 /> Granularity(&#8491;)=<input size="4" type="text" name="Gran" value=0.1 /></td>-->
 </tr>
 </table>
 </td></tr></table>
