--- a/Python/InputPeaks.html
+++ b/Python/InputPeaks.html
@@ -27,7 +27,7 @@ a:hover {color:white;}
  ~  <a href='InputPeaks.html' title='Home' target='_self'>User Uploads</a>
  ~  <a href='Peaks.html' title='Home' target='_self'>Peaks Explorer</a>
  ~  <a href='Slices.html' title='Home' target='_self'>Local Maps</a>
- ~  <a href='Documentation.html' title='Docs' target='_self'>Documentation</a>
+ ~  <a href='Documentation.html' title='Docs' target='_self'>About</a>
 ~ <a href='https://www.bbk.ac.uk/departments/biology/' title='Birkbeck' target='_blank'>Birkbeck Biology</a>
 </p>
 <hr/>
@@ -40,7 +40,7 @@ a:hover {color:white;}
 Note that we expect a matching electron densiity and pdb file, the atomic coordinates are used for distance reports. If you do not have a pdb file you can enter a blank file.<br/>
 Note also that the Fo and Fc num that are passed in for ccp4 files are not used for user files - we assume you have manipulated the file into your desired format alresdy (it saves you also uploading a diff file).<br/><br/>
 
-<b>Please be aware that we do not keep the data for any guaranteed length of time and thise files are available for you to access and use on our servers during your session.</b>
+<b>Please be aware that we do not keep the data for any guaranteed length of time and these files are available for you to access and use on our servers during your session.</b>
 </p>
 
 <hr/>
