--- a/Python/Synthetic.html
+++ b/Python/Synthetic.html
@@ -27,7 +27,7 @@ a:hover {color:white;}
  ~  <a href='InputPeaks.html' title='Home' target='_self'>User Uploads</a>
  ~  <a href='Peaks.html' title='Home' target='_self'>Peaks Explorer</a>
  ~  <a href='Slices.html' title='Home' target='_self'>Local Maps</a>
- ~  <a href='Documentation.html' title='Docs' target='_self'>Documentation</a>
+ ~  <a href='Documentation.html' title='Docs' target='_self'>About</a>
 ~ <a href='https://www.bbk.ac.uk/departments/biology/' title='Birkbeck' target='_blank'>Birkbeck Biology</a>
 </p>
 
