linux morning of server updates

--- a/Python/Leucippus.html
+++ b/Python/Leucippus.html
@@ -194,7 +194,7 @@ It must be in the <a class="change_link_color" href="https://www.wwpdb.org/docum
 <h3>Acknowledgements</h3>
 
 <p><b>Supervisor: </b>
-<a class="change_link_color" href="http://people.cryst.bbk.ac.uk/~ubcg66a/" title="MAW" target="_blank">Mark A. Williams</a> Director, ISMB Biopysics Centre
+<a class="change_link_color" href="http://people.cryst.bbk.ac.uk/~ubcg66a/" title="MAW" target="_blank">Mark A. Williams</a> Director, ISMB Biophysics Centre
 
 </p>
 
