--- a/Python/Documentation.html
+++ b/Python/Documentation.html
@@ -62,7 +62,7 @@ The documentation is on the <a  class="change_link_color" href='Leucippus.html' 
 <div style="background-color:Silver;margin:3px;padding:3px;color:Crimson;">
 <p><b>Developed by Rachel Alcraft, PhD student at Birkbeck, University of London, 2021 +<br/></b></p>
 <p><b>Supervisor: </b>
-<a class="change_link_color" href="http://people.cryst.bbk.ac.uk/~ubcg66a/" title="MAW" target="_blank">Mark A. Williams</a> Director, ISMB Biopysics Centre
+<a class="change_link_color" href="http://people.cryst.bbk.ac.uk/~ubcg66a/" title="MAW" target="_blank">Mark A. Williams</a> Director, ISMB Biophysics Centre
 
 </p>
 </div>
